# LMVMCPP

./: .gitignore  CMakeLists.txt  README.md  test_current.lmc  xmake.lua
.github/workflows/: build.yml  ci.yml
src/: file_loader.cpp  file_loader.h  file_loader.hpp  main.cpp  opcode.cpp  opcode.h  opcode.hpp
src/syscall/: file_operand.cpp  file_operand.hpp
src/test_file_generator/: test_file_generator.cpp
src/vm/: handler.cpp  handler.hpp  handler_fn.cpp  handler_fn.hpp  handler_init.cpp  internal_call_errno.hpp  local_state.cpp  models.cpp  models.hpp  vm.cpp  vm.h  vm.hpp
src/vmcall/: console_io.cpp  console_io.hpp
tests/: console_io_test.cpp
